fixed the alignment of the top div holding the hero text and rounded the button

--- a/styles.css
+++ b/styles.css
@@ -37,10 +37,30 @@ li{
     padding: 10px;
     margin: 0;
     border: 0;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 170px;
+    align-items: center;
+}
+.top h1{
+    font-size: 48px;
+    padding-bottom: 20px;
+}
+.top p{
+    font-size: 18px;
+    padding-bottom: 20px;
+    padding-right: 190px;
+}
+.top button{
+    background-color: #3882F6;
+    padding: 12px 28px;
+    font-size: 20px;
+    border-radius: 8px;
 }
 .top img{
     height:auto;
-    width: 6rem;
+    width: 25rem;
 }
 /*middle css*/
 .images img{
